New Enterprise admin panel

--- a/src/com/telehealth/userinterface/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
+++ b/src/com/telehealth/userinterface/SystemAdminWorkArea/ManageEnterpriseAdminJPanel.form
@@ -180,6 +180,9 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="networkJComboBoxActionPerformed"/>
       </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="ManageEnterpriseAdminJPanel_networkJComboBox"/>
+      </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
