--- a/src/telehealth/EnterpriseAdminPanel.form
+++ b/src/telehealth/EnterpriseAdminPanel.form
@@ -303,6 +303,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblEntAdminMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
