Done Some Changes

--- a/src/telehealth/EnterprisePanel.form
+++ b/src/telehealth/EnterprisePanel.form
@@ -100,11 +100,11 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="125" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" min="-2" pref="954" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="316" max="32767" attributes="0"/>
+              <EmptySpace pref="314" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -172,9 +172,9 @@
                   <Component id="networkJComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnDelete" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="151" max="-2" attributes="0"/>
-              <EmptySpace pref="98" max="32767" attributes="0"/>
+              <EmptySpace pref="105" max="32767" attributes="0"/>
               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -219,7 +219,7 @@
                 <Column editable="false" title="Enterprise Type" type="java.lang.String"/>
                 <Column editable="false" title="Address 1" type="java.lang.String"/>
                 <Column editable="false" title="Address 2" type="java.lang.String"/>
-                <Column editable="true" title="City" type="java.lang.String"/>
+                <Column editable="false" title="City" type="java.lang.String"/>
                 <Column editable="false" title="State" type="java.lang.String"/>
                 <Column editable="false" title="Zip" type="java.lang.String"/>
                 <Column editable="false" title="Phone" type="java.lang.String"/>
