--- a/src/telehealth/EnterpriseAdminPanel.form
+++ b/src/telehealth/EnterpriseAdminPanel.form
@@ -146,7 +146,7 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="cmbEnterprise">
       <Properties>
-        <Property name="font" type="java.awt.Font" resourceKey="jLabel2.font"/>
+        <Property name="font" type="java.awt.Font" resourceKey="cmbEnterprise.font"/>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
         </Property>
@@ -240,6 +240,9 @@
         <Property name="text" type="java.lang.String" resourceKey="btnDelete.text"/>
         <Property name="name" type="java.lang.String" value="btnDelete" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeleteActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <Properties>
