Patient diagnosis intermediate 2

--- a/src/telehealth/DiagnosisPanel.form
+++ b/src/telehealth/DiagnosisPanel.form
@@ -241,16 +241,16 @@
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="diagnosisDateTextField">
       <Properties>
-        <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format format="MM/dd/yyyy" subtype="-1" type="1"/>
+        <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
+          <Format format="##/##/####" subtype="-1" type="5"/>
         </Property>
         <Property name="name" type="java.lang.String" value="diagnosisDateTextField" noResource="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="nextDiagnosisDateTextField">
       <Properties>
-        <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format format="MM/dd/yyyy" subtype="-1" type="1"/>
+        <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
+          <Format format="##/##/####" subtype="-1" type="5"/>
         </Property>
         <Property name="name" type="java.lang.String" value="nextDiagnosisDateTextField" noResource="true"/>
       </Properties>
@@ -311,7 +311,8 @@
           <Properties>
             <Property name="font" type="java.awt.Font" resourceKey="tblDiagnosis.font"/>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="8" rowCount="0">
+              <Table columnCount="9" rowCount="0">
+                <Column editable="false" title="Patient" type="java.lang.Object"/>
                 <Column editable="false" title="BP Systolic" type="java.lang.Object"/>
                 <Column editable="false" title="BP Diastolic" type="java.lang.Object"/>
                 <Column editable="false" title="Heart Rate" type="java.lang.Object"/>
@@ -324,6 +325,11 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title resourceKey="tblDiagnosis.columnModel.title8"/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title resourceKey="tblDiagnosis.columnModel.title0"/>
                   <Editor/>
